--- a/src/views/pages/signup.ejs
+++ b/src/views/pages/signup.ejs
@@ -4,7 +4,7 @@
 <title>Sign Up</title>
 <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
-<body bgcolor=#d94100 onload="setTimeout(leave,3000)">
+<body bgcolor=#d94100>
 <h1>Sign Up:</h1>
 <p>Username: Must be 4 or more characters, only allowed characters are lower case and underscores. </p>
 <p>Password: Must be 9 or more characters, require: a special character(sans dot), one capital, one lower case, and a number. </p>
@@ -20,11 +20,5 @@
 </p>
 <button style= "color:blue;" id="signupBtn"> Sign Up </button>
 </form>
-<script>
-function leave() {
-	alert('hey');
-	document.loaction.href="login.html"
-}
-</script>
 </body>
 </html>
