--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -13,6 +13,6 @@
         <input type = "password" id = "Password" name ="Password" required> 
 
     </div>
-    <button type = "submit"> Register </button>
+    <button type = "submit"> Login </button>
 </form></for>
 <a href = "/register"> Register</a>
