--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,5 +1,4 @@
 <h1>Register</h1>
-<h1>Login</h1>
 <% if (message) { %>
     <%= message %>
   <% } %>
@@ -16,4 +15,4 @@
     </div>
     <button type = "submit"> Register </button>
 </form>
-<a href = "/login"> Register</a>
+<a href = "/login"> Login</a
