fixed small errors with commenting liking the video

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -39,13 +39,13 @@
             </select>
         </div>
         <div>
-            <button type="summit">Search</button>
+            <button type="summit">Edit Users</button>
         </div>
     </form>
   <% } %>
 
   <%if (user.role === 'Content Manager'){ %>
-  <h2>Content Manager Tools</h2>
+  <h1>Content Manager Tools</h1>
     <a href="/manageVideo">Manager Videos</a>
   <%}%>
   
