--- a/src/views/show.ejs
+++ b/src/views/show.ejs
@@ -15,7 +15,7 @@
 <%if(user.role == "Content Manager"){%>
 
 <form action="/<%=video._id%>/comment" method="POST" >
-<label>Commeent</label>
+<label>Comment</label>
 <input type="text" name="comment" id="comment" name="comment"></input>
 <button type="submit">Submit</button>
 </form>
