changed editVideo.ejs to now require the user to give a name of the video to edit as well as a new name for desired video

--- a/src/views/editVideo.ejs
+++ b/src/views/editVideo.ejs
@@ -6,12 +6,12 @@
     <div>
     <div>
         <label for="VdeioName">Video to Edit</label>
-        <input type = "text" id="name" name="name">
+        <input type = "text" id="name" name="name" required>
     </div>
     </div>
     <div>
         <labal for="newVideoName">New video Name</labal>
-        <input type = "text" id = "newName" name="newName">
+        <input type = "text" id = "newName" name="newName" required>
     </div>
     <div>
         <labal for="newVideoDeiscription">New video Discription</labal>
