#3 added the ability for content managers to delete videos when they are on the video page

--- a/src/views/addVideo.ejs
+++ b/src/views/addVideo.ejs
@@ -11,7 +11,7 @@
         <input type = "text" id ="videoDescription" name = "videoDescription"></input>
 
     </div>
-    <label for="videoLink">Link</label>
+    <label for="videoLink">Youtube Link</label>
     <input type = "text" id = "videoLink" name = "videoLink"></input>
     <div>
         <button type="submit">Add video</button>
