fixed #14 where videos could be added without a youtube link

--- a/src/views/addVideo.ejs
+++ b/src/views/addVideo.ejs
@@ -14,7 +14,7 @@
 
     </div>
     <label for="videoLink">Youtube Link</label>
-    <input type = "text" id = "videoLink" name = "videoLink" require></input>
+    <input type = "text" id = "videoLink" name = "videoLink" required></input>
     <div>
         <button type="submit">Add video</button>
     </div>
