added feedback on the edit page

--- a/src/views/editVideo.ejs
+++ b/src/views/editVideo.ejs
@@ -1,6 +1,8 @@
 <h1>This is for editing Videos</h1>
 
-
+<%if(message){ %>
+    <%=message%>
+<%}%>
 
 <form action = '/editVideo' method = "POST">
     <div>
